--- a/SpringEcom/src/main/resources/application.properties
+++ b/SpringEcom/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=SpringEcom
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/product_db
+spring.datasource.username=postgres
+spring.datasource.password=0000
+
+spring.jpa.hibernate.ddl-auto=update
+
