--- a/SpringEcom/src/main/resources/application.properties
+++ b/SpringEcom/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=SpringEcom
 
+spring.ai.openai.api-key=${OPENAI_API_KEY}
+spring.ai.openai.model=gpt-4o-mini
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/product_db
 spring.datasource.username=postgres
 spring.datasource.password=0000
