Added pgvector and moved database to Docker setup

--- a/SpringEcom/src/main/resources/application.properties
+++ b/SpringEcom/src/main/resources/application.properties
@@ -3,11 +3,16 @@ spring.application.name=SpringEcom
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.model=gpt-4o-mini
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/product_db
-spring.datasource.username=postgres
-spring.datasource.password=0000
+#spring.datasource.url=jdbc:postgresql://localhost:5432/product_db
+#spring.datasource.username=postgres
+#spring.datasource.password=0000
 
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.hikari.auto-commit=false
 
+spring.sql.init.schema-location=classpath:init/schema.sql
+spring.sql.init.mode=always
+#spring.ai.openai.embedding.options.model=text-embedding-ada-002
+spring.ai.openai.embedding.options.model=text-embedding-3-small
+spring.main.allow.bean.definition-overriding=true
